# nvidia-ci-demo

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: math_ops.h
scripts/: run_tests.py
src/: math_ops.cpp
tests/: test_math_ops.cpp
